--- a/.env.example
+++ b/.env.example
@@ -81,3 +81,8 @@ SMTP_DOMAIN='gmail.com'
 SMTP_USERNAME=''
 SMTP_PASSWORD=''
 SMTP_NEW_NOTIFICATION_ADRESS_LIST=''
+
+##
+# Google analytics
+GOOGLE_ANALYTICS_TRACKER_CODE='UA-xxxxxx-x'
+
