spec fix + employee and customer select update another select option items

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -7,7 +7,7 @@ redirect_to_webpage: <%= ENV['OPENREPLY_REDIRECT_TO_WEBPAGE'] %>
 new_rating_notifications_emails: false
 
 otrs_api:
-  enabled: false
+  enabled: true
   url: <%= ENV['OPENREPLY_OTRS_URL'] %>
   redirect_url: <%= ENV['OPENREPLY_OTRS_REDIRECT_URL'] %>
   unknown_customers: ["-", ""]
