--- a/.env.example
+++ b/.env.example
@@ -78,6 +78,7 @@ OPENREPLY_OTRS_SPECS_ARTICLES_COUNT='123'
 # SMTP mail service
 SMTP_ADDRESS='smtp.gmail.com'
 SMTP_DOMAIN='gmail.com'
+SMTP_PORT='587'
 SMTP_USERNAME=''
 SMTP_PASSWORD=''
 SMTP_NEW_NOTIFICATION_ADRESS_LIST=''
