--- a/.env.example
+++ b/.env.example
@@ -53,6 +53,7 @@ OPENREPLY_DEPLOY_GROUP_PRODUCTION='openreply'
 OPENREPLY_DEPLOY_RVM_TYPE_STAGING='user'
 OPENREPLY_DEPLOY_RVM_TYPE_PRODUCTION='system'
 
+OPENREPLY_DEPLOY_RVM_PATH_PRODUCTION=''
 
 ##
 # OTRS API settings
