--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,6 +1,6 @@
 max_int_rating: 5
 logo: <%= ENV['OPENREPLY_LOGO'] %>
-from_logo: <%= ENV['OPENREPLY_LOGO'] %>
+from_logo: <%= ENV['OPENREPLY_FROM_LOGO'] %>
 color: "#F14E3C"
 release_message: Openreply v0.2, nové:\n- pri filtrovaní zobrazenie info boxu o práci\n- filtrovanie ratio podla času a klienta\n- štatistika pomer hodnotení k celkovým možným (ratio)\n- získavanie ticket number\n- vypnutý autocomplete pri prihlasovaní\n- pri chybnom linku sa zobrazí chybová stránka namiesto modálneho okna\n- nový dizajn formulár pre IE8\n- zmenený admin user\n- ...\n
 redirect_to_webpage: <%= ENV['OPENREPLY_REDIRECT_TO_WEBPAGE'] %>
